fix text alignment

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ h1 {
 	height: 50rem;
 	margin: 0 auto;
 	position: absolute;
-	top: 10%;
+	top: 15%;
 	width: 50rem;
 }
 
@@ -194,7 +194,7 @@ h1 {
 .ellipses-container .sub-text {
 	font-size: 2rem;
 	font-weight: 300;
-	left: 6rem;
+	left: 3rem;
 	letter-spacing: 3rem;
 	margin: 0 auto;
 	position: absolute;
@@ -205,7 +205,7 @@ h1 {
                  0px 14px 2px rgba(0,0,0,0.1),
                  0px 24px 30px rgba(0,0,0,0.1);
 	text-transform: uppercase;
-	top: 28rem;
+	top: 33rem;
 	z-index: 1;
 }
 
